# nothing-gpt

./: .gcloudignore  .gitignore  README.md  pyproject.toml
configs/: characters.json
data/dpo/: completions.jsonl  train.jsonl  val.jsonl
data/training/: val.jsonl
docker/: cloudbuild.yaml  generate.Dockerfile  serve.Dockerfile  train.Dockerfile  ui.Dockerfile
docs/: dpo-pipeline.md  sft-pipeline.md  training-tuning.md
k8s/: dpo-train.yaml  generate-pairs.yaml  judge.yaml  serve.yaml  service-account.yaml  sft-train.yaml  ui.yaml
nothing_gpt/: constants.py
nothing_gpt/data/: format.py  parse.py
nothing_gpt/dpo/: generate_pairs.py  judge.py  train.py
nothing_gpt/modal/: app.py  config.py  dpo_train.py  serve.py  train.py
nothing_gpt/serve/: server.py
nothing_gpt/sft/: format.py  train.py
nothing_gpt/ui/: app.py
scripts/: run_etl.py
src/nothing_gpt/: characters.py
src/nothing_gpt/data/: download.py  format.py  parse.py
src/nothing_gpt/eval/: __main__.py  generate.py  judge.py  run.py
src/nothing_gpt/modal/: __init__.py  config.py  serve.py  train.py  ui.py
tests/: test_dpo.py  test_format.py  test_generate.py  test_judge.py  test_parse.py  test_run.py
