[project]
name = "nothing-gpt"
version = "0.1.0"
description = "Chat with Seinfeld characters via fine-tuned Llama 3.2"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "kagglehub>=0.3",
    "openai>=1.0",
]

[project.scripts]
nothing-gpt-etl = "nothing_gpt.data:run_etl"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "modal>=0.72",
]

[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nothing_gpt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
