[project]
name = "nothing-gpt"
version = "0.1.0"
description = "Chat with sitcom characters via fine-tuned Llama 3.2"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "kagglehub>=0.3",
    "openai>=1.0",
    "wandb>=0.19",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "modal>=0.72",
    "tiktoken>=0.8",
]

[tool.ruff]
target-version = "py313"
line-length = 99
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["nothing_gpt", "tests", "scripts"]
exclude = [
    "nothing_gpt/dpo",
    "nothing_gpt/modal",
    "nothing_gpt/sft",
    "nothing_gpt/ui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nothing_gpt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
